# streamlit-supabase-demo

./: pyproject.toml  requirements.txt  streamlit_app.py
