[tool.poetry]
name = "streamlit-supabase-demo"
version = "0.1.0"
description = ""
authors = ["Tomasz Kontusz <tomasz.kontusz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.3.0"
streamlit-url-fragment = "^0.2.0"
supabase = {git = "https://github.com/supabase-community/supabase-py", rev = "develop"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
